# writing-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.bat  start.ps1  writing-agent_最终版待办清单_2026-02-26.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
_misc_root/: SVELTE_MIGRATION_PLAN.md  SYSTEM_OPTIMIZATION.md  run_server.bat  run_with_log.bat  start.ps1  start_clean.bat  start_clean.ps1  start_desktop.bat  start_desktop.ps1  写作agent.md
docs/: ACADEMIC_DIAGRAM_RENDER_REBUILD_20260313_CN.md  ACADEMIC_EXPORT_HARD_GATES_20260306.md  AI_SDK_ADAPTER.md  ALERT_ESCALATION_POLICY.md  ALL_INFORMATION_IMPLEMENTATION_MASTER_20260312_CN.md  ALL_TEST_CONTENT_SUMMARY.md  ALL_TEST_CONTENT_SUMMARY_DETAILED_CN.md  ALL_UNFINISHED_FEATURES.md  API_SCHEMA_AND_ERRORS.md  API_VERSIONING.md  ARTIFACT_SCHEMA_CATALOG.md  ASYNC_JOB_QUEUE.md  AUDIT_TRAIL_INTEGRITY.md  CAPACITY_MODEL.md  CITATION_URL_AUTOFILL_IMPLEMENTATION_20260303_CN.md  COMMIT_PREP_20260303_CN.md  COMPLEX_PROMPT_DOCX_TEST_20260223_184816.md  COMPLEX_PROMPT_DOCX_TEST_20260223_184816_EN.md  COMPLEX_PROMPT_SUITE_EXECUTION_LOG_20260223.md  COMPLEX_PROMPT_SUITE_QUALITY_AUDIT_V1.json  COMPLEX_PROMPT_SUITE_QUALITY_AUDIT_V1.md  CONFIG_SECRET_GOVERNANCE.md  CONTAINER_IAC.md  CONTENT_VALIDATION_DOCX_ALL_GUIDE.md  CONTENT_VALIDATION_MASTER_PLAN.md  DECOUPLING_EXECUTION_REPORT_20260225_CN.md  DECOUPLING_EXECUTION_SPEC_20260225_CN.md  DECOUPLING_REFACTOR_EXECUTION_PLAN_20260225_CN.md  DEPENDENCY_BASELINE_POLICY.md  DEVELOPMENT.md  DISASTER_RECOVERY_DRILL.md  DOCIR_FORMAT_PARAGRAPH_INTEGRITY_TASKLIST_20260306_CN.md  DOCX_MANUAL_REVIEW_FINDINGS_20260224.md  EDIT_INTENT_PARSING_BEST_PRACTICES_AND_PLAN_20260228_CN.md  EXPORT_QUALITY_DECOUPLING_EXECUTION_REPORT_20260225_CN.md  EXPORT_QUALITY_DECOUPLING_EXECUTION_SPEC_20260225_CN.md  EXPORT_QUALITY_EXECUTION_REPORT_20260226_CN.md  EXPORT_QUALITY_EXECUTION_SPEC_20260226_CN.md  EXTERNAL_REVIEW_PROBLEMS_AND_REMEDIATIONS_20260310_CN.md  FINAL_ARCHITECTURE_AND_CHANGESET_MASTER_20260309_CN.md  (+54 more)
engine/: Cargo.toml  FORMAT_SPEC.md  JSON_PROTOCOL.md  README.md  RUST_EDITOR_PLAN.md  TEST_REPORT.md
engine/.cargo/: config.toml
engine/benches/: Cargo.toml
engine/benches/benches/: baseline.rs
engine/benches/src/: lib.rs
engine/bridge/: Cargo.toml  build.bat  build.sh
engine/bridge/src/: lib.rs
engine/core/: Cargo.toml
engine/core/src/: ast.rs  commands.rs  diff.rs  docx.rs  editor.rs  history.rs  interner.rs  io.rs  io_any.rs  io_json.rs  lib.rs  pdf.rs  selection.rs  table.rs
engine/core/tests/: io_any.rs  io_table.rs
engine/engine/: Cargo.toml
engine/engine/src/: cache.rs  hittest.rs  image.rs  layout.rs  lib.rs  linebreak.rs  metrics.rs  render_cache.rs  syntax.rs
engine/engine/tests/: layout.rs  metrics.rs
engine/tests/: basic.rs
engine/tests/samples/: e2e_docx_results.json  import_results.json  large_multilang.txt  sample.html  sample.md  sample.odt  sample.rtf  sample.txt
engine/tests/samples/tmp/: 1002_1181v1_pdf.json  sample_docx.json  sample_html.json  sample_md.json  sample_txt.json  一种可选的章节结构_仅供参考__docx.json
engine/tools/: export_docx.py  extract_text.py
engine/ui/: Cargo.toml
engine/ui/src/: main.rs
scripts/: README.md  alert_escalation_guard.py  apply_capacity_policy_threshold_patch.py  artifact_schema_catalog_guard.py  audit_chain.py  bench_thresholds.py  build_reference_library.py  capacity_alert_policy_drift.py  capacity_cost_dashboard.py  capacity_forecast.py  capacity_guard.py  capacity_stress_gate.py  capacity_stress_matrix.py  citation_verify_alert_chaos.py  citation_verify_load_probe.py  citation_verify_long_soak_guard.py  citation_verify_soak.py  cnki_open_access_download.py  compare_bench.py  complex_prompt_quality_audit_v1.py  correlation_trace_guard.py  create_incident_report.py  create_rollback_bundle.py  data_classification_guard.py  dependency_audit.py  disaster_recovery_drill.py  doc_encoding_guard.py  docs_reality_guard.py  docx_format_sample_check.py  env_consistency_guard.py  extract_prefs_test.py  flaky_test_guard.py  generate_release_manifest.py  generate_sbom.py  (+68 more)
(+695 files in other folders)
