[workspace]
members = ["core", "engine", "ui", "benches", "bridge"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
