[package]
name = "wa_benches"
version.workspace = true
edition.workspace = true

[dependencies]
wa_core = { path = "../core" }
wa_engine = { path = "../engine" }
uuid.workspace = true
serde_json.workspace = true
dhat = "0.3"

[dev-dependencies]
criterion = "0.5"
dhat = "0.3"
tracing-subscriber = "0.3"

[[bench]]
name = "baseline"
harness = false
