[package]
name = "wa_bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wa_core = { path = "../core", default-features = false }
wa_engine = { path = "../engine" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"

# WASM绑定
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "console",
] }

# 性能优化
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
