[package]
name = "wa_ui"
version.workspace = true
edition.workspace = true

[dependencies]
wa_core = { path = "../core" }
wa_engine = { path = "../engine" }
tracing.workspace = true
uuid.workspace = true

# eframe brings egui + winit
[dependencies.eframe]
version = "0.27"
features = ["default"]

[dependencies.egui]
version = "0.27"

[dependencies.arboard]
version = "3.4"
